--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@
 
 *.hpp
 Lab_01/Lab_01/Lab_01.vcxproj
+*.vcxproj
+Lab_01/.vs/Lab_01/v16/ipch/AutoPCH/a887ffa281f72615/LAB_01.ipch
+Lab_01/.vs/Lab_01/v16/Browse.VC.db
+Lab_01/.vs/Lab_01/v16/.suo
