--- a/Lab_01/Lab_01/Lab_01.vcxproj
+++ b/Lab_01/Lab_01/Lab_01.vcxproj
@@ -107,7 +107,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Студент\Desktop\Lab_01\Lab_01\boost_1_80_0_GV;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Working\2 curse\TerVer\Lab_01\Lab_01\boost_1_80_0_GV;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
